@@ -140,7 +140,7 @@ rb_fstring(VALUE str)
 	str = (VALUE)fstr;
 	/* because of lazy sweep, str may be unmaked already and swept
 	 * at next time */
-	rb_gc_mark(str);
+	rb_gc_resurrect(str);
     }
     else {
 	str = rb_str_new_frozen(str);
